# TIN

./: .gitignore  CS.md  README.md
Regulator_Oswietlenia/: Regulator_Oswietlenia.sln
Regulator_Oswietlenia/Regulator_Oswietlenia/: Program.cs
Urzadzenie_Oswietlenia/: Urzadzenie_Oswietlenia.sln
Urzadzenie_Oswietlenia/Regulator_Oswietlenia/: LampRegulator.cs  Program.cs
Urzadzenie_Oswietlenia/Urzadzenie_Oswietlenia/: Lamp.cs  Program.cs
frontend/: .editorconfig  .eslintignore  .eslintrc  README.md  config-overrides.js  package.json  prettier.config.js  tsconfig.json
frontend/cypress/fixtures/: devices.json  publicKey.pem  regulators.json
frontend/src/: index.css  index.tsx
lights/: lights.sln
lights/KeyHolder/: KeyHolder.csproj  KeyLoader.cs
lights/TSHP/: ChangeConfig.cs  CurrentData.cs  DeviceSetting.cs  Messege.cs  RegulatorDevice.cs  ServerRegulator.cs  TSHP.csproj  utils.cs
lights/light_device/: Lamp.cs  LampDevice.cs  Program.cs  light_device.csproj
lights/light_regulator/: LampRegulator.cs  Program.cs  light_regulator.csproj
server/: .gitignore  key.public.rsa  pom.xml  signature
temerature-device/: CMakeLists.txt  README.md  clientmain.cpp  main.cpp  main1.cpp
temerature-device/src/connection-handler/: connection-exceptions.hpp  connection-handler.hpp  connection-lost-during-read-exception.hpp  data-parser.hpp  data-reader.hpp  data-sender.hpp  header-handler.hpp  invalid-data-exceptions.hpp
temerature-device/src/connection-handler/__tests__/: data-parser-test.cpp
temerature-device/src/device/: device-handler.hpp  device.hpp
temerature-device/src/device/__tests__/: device-test.cpp
temerature-device/src/security/: key-generator.hpp  regulator-keys-not-found.hpp  security-module.hpp
temerature-device/src/security/__tests__/: key-generator-test.cpp  security-module-test.cpp
temerature-device/src/server/: accept-connection-exception.hpp  server.hpp  socket-initialisation-exception.hpp
temerature-device/src/utils/: errno-exception.hpp
temerature-device/test/: catch.hpp  maintest.cpp
temperature_regulator/: Artur_klucz.public  client.py  external_packages.txt  server.py  server_dispatcher.py  server_thread.py  temperature_regulator.py  test_only_key.public
temperature_regulator/test/: Jarek_server.py  Jarek_server_key.private  Jarek_server_key.public  Kacper_client.py  Kacper_client_key.private  cryptography_handler.py  test_server_dispather.py
(+162 files in other folders)
